--- a/Practical10/style.css
+++ b/Practical10/style.css
@@ -12,6 +12,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /* position: fixed;
+    top: 0; */
 }
 
 .header img {
@@ -37,7 +39,41 @@
     margin: auto;
 }
 
-
-/* .content p {
+.content p {
     text-align: justify;
-} */
+}
+
+.sidebar {
+    width: 20%;
+    height: 100%;
+    float: left;
+    position: fixed;
+    top: 70px;
+    background-color: #353b48;
+}
+
+.sidebar ul {
+    list-style: none;
+}
+
+.sidebar ul li {
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+}
+
+.sidebar ul li a {
+    display: block;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 15px 25px;
+    transition: .4s;
+}
+
+a i {
+    margin-right: 15px;
+}
+
+.sidebar ul li a:hover {
+    border-left: 10px solid #fff;
+}
