--- a/Practical10/style.css
+++ b/Practical10/style.css
@@ -44,7 +44,7 @@
 }
 
 .sidebar {
-    width: 20%;
+    width: 15%;
     height: 100%;
     float: left;
     position: fixed;
@@ -76,4 +76,20 @@ a i {
 
 .sidebar ul li a:hover {
     border-left: 10px solid #fff;
+}
+
+i {
+    font-size: 30px;
+    color: white;
+}
+
+.social {
+    margin-top: 320px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 30px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+    border-top: 2px solid rgba(255, 255, 255, 0.1);
+    padding: 15px 25px;
 }
