--- a/Practical11/style.css
+++ b/Practical11/style.css
@@ -24,7 +24,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    padding: 10px;
+    padding: 30px 10px;
 }
 
 .about {
@@ -32,8 +32,6 @@ footer {
 }
 
 .sec-1 h2 {
-    /* margin-top: 10px;
-    margin-bottom: 10px; */
     font-size: 18px;
     color: white;
     text-transform: uppercase;
@@ -75,7 +73,7 @@ i {
 .sec-2 {
     display: flex;
     justify-content: center;
-    padding: 10px;
+    padding: 20px;
     align-items: center;
 }
 
@@ -102,6 +100,7 @@ i {
 .sec-3 {
     display: flex;
     justify-content: center;
+    padding: 30px;
 }
 
 .sec-3 ul {
@@ -126,6 +125,341 @@ i {
     text-align: center;
 }
 
-.sec-3 ul li i:nth-child(1):hover {
+.sec-3 ul li:nth-child(1):hover {
     background-color: #3b5999;
+}
+
+.sec-3 ul li:nth-child(2):hover {
+    background-color: #55acee;
+}
+
+.sec-3 ul li:nth-child(3):hover {
+    background-color: #dd4b39;
+}
+
+.sec-3 ul li:nth-child(4):hover {
+    background-color: #0077b5;
+}
+
+.sec-3 ul li:nth-child(5):hover {
+    background-color: #ea4c89;
+}
+
+.sec-4 {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    padding: 30px;
+}
+
+.sec-4 p {
+    color: grey;
+}
+
+.sec-4 p::after {
+    content: '';
+    display: block;
+    width: 0;
+    position: absolute;
+    right: 0;
+    bottom: -10px;
+    background-color: yellow;
+    transition: all .3s;
+}
+
+.sec4 p:hover::after {
+    width: 100%;
+}
+
+hr {
+    opacity: .2;
+}
+
+@media (max-width: 767px) {
+    .main-content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 40px;
+        color: grey;
+    }
+    footer {
+        width: 100%;
+        background-color: #26272b;
+    }
+    .sec-1 {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 30px 10px;
+    }
+    .about {
+        width: 100%;
+    }
+    .sec-1 h2 {
+        font-size: 18px;
+        color: white;
+        text-transform: uppercase;
+    }
+    .about p {
+        text-align: justify;
+        color: grey;
+        line-height: 24px;
+        margin-top: 10px;
+    }
+    .sec-1 ul {
+        list-style: none;
+    }
+    .sec-1 ul li {
+        list-style: none;
+    }
+    a {
+        text-decoration: none;
+        color: gray;
+    }
+    a:hover {
+        color: orange;
+    }
+    span {
+        color: grey;
+    }
+    i {
+        color: grey;
+        font-size: 20px;
+    }
+    .sec-2 {
+        display: flex;
+        justify-content: center;
+        padding: 20px;
+        align-items: center;
+    }
+    .sec-2 p {
+        color: grey;
+        font-style: 24px;
+        padding: 0;
+    }
+    .sec-2 a {
+        display: inline-block;
+        padding: 10px 15px;
+        color: white;
+        background-color: red;
+        margin-left: 10px;
+        border-radius: 20px;
+        font-size: 22px;
+    }
+    .sec-2 a:hover {
+        background-color: orange;
+    }
+    .sec-3 {
+        display: flex;
+        justify-content: center;
+        padding: 30px;
+    }
+    .sec-3 ul {
+        list-style: none;
+        margin: 20px;
+    }
+    .sec-3 ul li {
+        display: inline-block;
+        width: 60px;
+        height: 60px;
+        padding: 20px;
+        background-color: #424242;
+        border-radius: 50%;
+        margin-right: 20px;
+    }
+    .sec-3 ul li i {
+        color: white;
+        font-size: 24px;
+        line-height: 20px;
+        text-align: center;
+    }
+    .sec-3 ul li:nth-child(1):hover {
+        background-color: #3b5999;
+    }
+    .sec-3 ul li:nth-child(2):hover {
+        background-color: #55acee;
+    }
+    .sec-3 ul li:nth-child(3):hover {
+        background-color: #dd4b39;
+    }
+    .sec-3 ul li:nth-child(4):hover {
+        background-color: #0077b5;
+    }
+    .sec-3 ul li:nth-child(5):hover {
+        background-color: #ea4c89;
+    }
+    .sec-4 {
+        display: flex;
+        justify-content: center;
+        background-color: black;
+        padding: 30px;
+    }
+    .sec-4 p {
+        color: grey;
+    }
+    .sec-4 p::after {
+        content: '';
+        display: block;
+        width: 0;
+        position: absolute;
+        right: 0;
+        bottom: -10px;
+        background-color: yellow;
+        transition: all .3s;
+    }
+    .sec4 p:hover::after {
+        width: 100%;
+    }
+    hr {
+        opacity: .2;
+    }
+}
+
+@media(max-width: 499px) {
+    .main-content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 40px;
+        color: grey;
+    }
+    footer {
+        width: 100%;
+        background-color: #26272b;
+    }
+    .sec-1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding: 30px 10px;
+    }
+    .about {
+        width: 100%;
+    }
+    .sec-1 h2 {
+        font-size: 18px;
+        color: white;
+        text-transform: uppercase;
+        margin-top: 20px;
+    }
+    .about p {
+        text-align: justify;
+        color: grey;
+        line-height: 24px;
+        margin-top: 10px;
+    }
+    .sec-1 ul {
+        list-style: none;
+    }
+    .sec-1 ul li {
+        list-style: none;
+    }
+    a {
+        text-decoration: none;
+        color: gray;
+    }
+    a:hover {
+        color: orange;
+    }
+    span {
+        color: grey;
+    }
+    i {
+        color: grey;
+        font-size: 20px;
+    }
+    .sec-2 {
+        display: flex;
+        justify-content: center;
+        padding: 20px;
+        align-items: center;
+    }
+    .sec-2 p {
+        color: grey;
+        font-style: 24px;
+        padding: 0;
+    }
+    .sec-2 a {
+        display: inline-block;
+        padding: 10px 15px;
+        color: white;
+        background-color: red;
+        margin-left: 10px;
+        border-radius: 20px;
+        font-size: 22px;
+    }
+    .sec-2 a:hover {
+        background-color: orange;
+    }
+    .sec-3 {
+        display: flex;
+        justify-content: center;
+        padding: 30px;
+    }
+    .sec-3 ul {
+        list-style: none;
+        margin: 20px;
+    }
+    .sec-3 ul li {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        padding: 10px;
+        background-color: #424242;
+        border-radius: 50%;
+        margin-right: 10px;
+    }
+    .sec-3 ul li i {
+        color: white;
+        width: 40px;
+        font-size: 24px;
+        line-height: 20px;
+        text-align: center;
+    }
+    .sec-3 ul li:nth-child(1):hover {
+        background-color: #3b5999;
+    }
+    .sec-3 ul li:nth-child(2):hover {
+        background-color: #55acee;
+    }
+    .sec-3 ul li:nth-child(3):hover {
+        background-color: #dd4b39;
+    }
+    .sec-3 ul li:nth-child(4):hover {
+        background-color: #0077b5;
+    }
+    .sec-3 ul li:nth-child(5):hover {
+        background-color: #ea4c89;
+    }
+    .sec-4 {
+        display: flex;
+        justify-content: center;
+        background-color: black;
+        padding: 30px;
+    }
+    .sec-4 p {
+        color: grey;
+    }
+    .sec-4 p::after {
+        content: '';
+        display: block;
+        width: 0;
+        position: absolute;
+        right: 0;
+        bottom: -10px;
+        background-color: yellow;
+        transition: all .3s;
+    }
+    .sec4 p:hover::after {
+        width: 100%;
+    }
+    hr {
+        opacity: .2;
+    }
 }
